# autonomous-dev-agent

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  feature-list.json  pyproject.toml
ada-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ada-dashboard/e2e/: dashboard.spec.ts
ada-dashboard/src/: App.tsx  index.css  main.tsx
ada-dashboard/src/components/: AcceptanceCriteria.test.tsx  AcceptanceCriteria.tsx  (+12 more)
docs/: DESIGN.md  HANDOFF-Phase2.md  HANDOFF-Phase3.md  OBSERVABILITY_SPEC.md  PROJECT.txt  RETROSPECTIVE-2026-01-20.md  ROADMAP.md  SOURCES.md  UNCOMMITTED_CHANGES_PROCEDURE.md  chatbot-feature-list.json  chatbot-feature-list2.json  theming-standalone.md
examples/: feature-list.json
scripts/: logs.sh  start-all.sh  start-backend.sh  start-frontend.sh  status.sh  stop-all.sh  stop-backend.sh  stop-frontend.sh
src/autonomous_dev_agent/: __init__.py  alert_manager.py  cli.py  cli_utils.py  cost_tracker.py  git_manager.py  harness.py  log_formatter.py  model_selector.py  models.py  progress.py  protocols.py  session.py  session_history.py  session_logger.py  token_tracker.py  validators.py  verification.py  workspace.py  workspace_health.py
tests/: __init__.py  test_cost_tracker.py  test_discovery.py  test_generation.py  test_harness.py  test_model_selector.py  test_models.py  test_orchestration.py  test_progress.py  test_reliability.py  test_session.py  test_session_history.py  test_session_logger.py  test_token_tracker.py  test_validators.py  test_verification.py  test_workspace.py  test_workspace_health.py
(+50 files in other folders)
